office-kubernetes/kustomize/transmission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
