office-kubernetes/kustomize/transmission/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "transmission.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: transmission
        port: 80
